# 01_Agent

./: .gitignore  README.md  pyproject.toml
src/: agent.py  list_id_script.py  main.py
